@@ -1,3 +1,10 @@
+2006-09-02  Davyd Madeley  <davyd@madeley.id.au>
+
+	* themes/Tango/config:
+	* themes/Tango/tango-eye.png:
+	* themes/Tango/tango-pupil.png:
+	- added a Tango eye theme
+
 2005-09-28  Ryan Lortie  <desrt@desrt.ca>
 
 	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
